--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,8 +8,9 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
-
+      - href: about.qmd
+        text: "CV"
+        
 format:
   html:
     theme:
@@ -18,4 +19,7 @@ format:
     toc: true
 
 editor: visual
+
+
+  
 
